<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/text_padding"
        android:textSize="@dimen/product_text_heading"
        android:text="@string/product_name"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/text_padding"
        android:textSize="@dimen/product_subtext_size"
        android:id="@+id/product_name"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/text_padding"
        android:textSize="@dimen/product_text_heading"
        android:text="@string/category_name"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/text_padding"
        android:textSize="@dimen/product_subtext_size"
        android:id="@+id/product_category"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/text_padding"
        android:textSize="@dimen/product_text_heading"
        android:text="@string/product_description"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/text_padding"
        android:textSize="@dimen/product_subtext_size"
        android:id="@+id/product_description"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/text_padding"
        android:textSize="@dimen/product_text_heading"
        android:text="@string/num_ratings"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/text_padding"
        android:textSize="@dimen/product_subtext_size"
        android:id="@+id/product_number_ratings"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/text_padding"
        android:textSize="@dimen/product_text_heading"
        android:text="@string/min_os_version"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/product_subtext_size"
        android:padding="@dimen/text_padding"
        android:id="@+id/min_version"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/text_padding"
        android:textSize="@dimen/product_text_heading"
        android:text="@string/product_rating"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/text_padding"
        android:textSize="@dimen/product_subtext_size"
        android:id="@+id/product_rating"/>
</LinearLayout>